[gd_scene load_steps=11 format=3 uid="uid://bjsg7mkm5swaq"]

[ext_resource type="Script" uid="uid://dkwf1nly0b2wx" path="res://gnat.gd" id="1_4gkgm"]
[ext_resource type="Texture2D" uid="uid://ccgvaotqf4yil" path="res://assets/textures/enemies/gnat.png" id="2_84y21"]
[ext_resource type="Script" uid="uid://trfpmwnmpqmm" path="res://entities/enemies/state_machine/state_machine.gd" id="3_iqwjq"]
[ext_resource type="Script" uid="uid://b47slynxvkcm" path="res://entities/enemies/state_machine/behaviours/gnat_attack_player.gd" id="4_0ia1a"]
[ext_resource type="Script" uid="uid://cg1q7s1urt42s" path="res://entities/enemies/state_machine/behaviours/no_ai.gd" id="4_8hmys"]
[ext_resource type="Script" uid="uid://by1v8sj8wxofy" path="res://entities/enemies/state_machine/behaviours/gnat_airborne.gd" id="4_137j7"]
[ext_resource type="Script" uid="uid://6r10twc71dhp" path="res://entities/enemies/state_machine/behaviours/gnat_idle.gd" id="4_e2xfl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvl3w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ia1a"]
radius = 140.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8hmys"]
radius = 11.7851

[node name="gnat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_4gkgm")
metadata/_edit_vertical_guides_ = [-521.0]

[node name="collision_area_shape" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 4
shape = SubResource("CircleShape2D_qvl3w")

[node name="rotation_marker" type="Marker2D" parent="."]

[node name="gnat_sprite" type="Sprite2D" parent="rotation_marker"]
texture = ExtResource("2_84y21")

[node name="area_sight" type="Area2D" parent="rotation_marker"]
collision_layer = 4
collision_mask = 4

[node name="vision_area_sight_shape" type="CollisionShape2D" parent="rotation_marker/area_sight"]
position = Vector2(0, -1.17477e-12)
rotation = 1.5708
shape = SubResource("CircleShape2D_0ia1a")

[node name="area_touch" type="Area2D" parent="rotation_marker"]
collision_layer = 4
collision_mask = 4

[node name="vision_area_touch_shape" type="CollisionShape2D" parent="rotation_marker/area_touch"]
shape = SubResource("CircleShape2D_8hmys")

[node name="brain" type="Node" parent="." node_paths=PackedStringArray("initial_state", "puppet")]
script = ExtResource("3_iqwjq")
initial_state = NodePath("GnatAttackPlayer")
puppet = NodePath("..")
metadata/_custom_type_script = "uid://trfpmwnmpqmm"

[node name="GnatAirborne" type="Node" parent="brain"]
script = ExtResource("4_137j7")
metadata/_custom_type_script = "uid://by1v8sj8wxofy"

[node name="GnatIdle" type="Node" parent="brain"]
script = ExtResource("4_e2xfl")
metadata/_custom_type_script = "uid://6r10twc71dhp"

[node name="GnatAttackPlayer" type="Node" parent="brain"]
script = ExtResource("4_0ia1a")
metadata/_custom_type_script = "uid://b47slynxvkcm"

[node name="NoAi" type="Node" parent="brain"]
script = ExtResource("4_8hmys")
metadata/_custom_type_script = "uid://cg1q7s1urt42s"

[node name="timer" type="Timer" parent="."]
